added login and register functionality

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
-body{
-    text-align: center;
+body {
+  text-align: center;
+}
+
+.loginForm {
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  padding: 10px;
 }
